# rotationaldiffusion

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yaml  tests.py
docs/: Makefile  requirements.txt  requirements.yaml
docs/source/: api.rst  conf.py  index.rst  references.bib
docs/source/pages/: mdaapi.rst  orientations.rst
rdiffusion/: OLD.py  parser.py  test.py
rotationaldiffusion/: __init__.py  diffusion.py  mdaapi.py  orientations.py  plotting.py  quaternions.py
src/rotationaldiffusion/: __init__.py  align.py  correlations.py  diffusion.py  fitting.py  model.py  orientations.py  plotting.py  td_tensors.py  uncertainties.py  utils.py
tests/: test_correlations.py  test_mdaapi.py  test_orientations.py
tests/data/: #nojump.xtc.1#  .ubq.xtc_offsets.npz  centered.xtc  index.ndx  ubq-traj.gro  ubq.gro  ubq.gro.bp  ubq.tpr  ubq.xtc  ubq.xtc.bp  whole.xtc
