[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'rotationaldiffusion'
version = '0.7'
description = 'Analysis of rotational diffusion observed in simulations.'
license = {file = 'LICENSE'}
authors = [{name = 'Simon Holtbruegge', email = 'simon.holtbruegge@rub.de'}]
maintainers = [{name = 'Simon Holtbruegge', email = 'simon.holtbruegge@rub.de'}]
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
    'numpy>=1.23.2',
    'scipy>=1.7.0',
    'MDAnalysis>=2.8.0',
    'matplotlib>=3.4.0',
    'tqdm>=4.60.0'
]

[project.optional-dependencies]
test = ['pytest>=6.0', 'MDAnalysisTests']
docs = ['sphinx>=4.0']

#    "MDAnalysisTests>=2.0.0",
#    "pytest-xdist>=2.5",
#    "pytest-cov>=3.0"
#[tool.setuptools.packages.find]
#include = ['rotationaldiffusion*']
